--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import 'lib/_colors.scss';
 
 $offset: 32px;
@@ -25,7 +27,7 @@ $breakpoints: (
 }
 
 @function toRem($value) {
-	@return $value / 16 + rem;
+	@return math.div($value, 16) + rem;
 }
 
 $duration: 0.3s;
