--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,6 +1,9 @@
 $colors: (
 	primary: #c0baff,
 	secondary: #c0baff,
+
+	text: #161616,
+	back: #f5f5f5,
 );
 
 @function getColor($key: 'primary') {
