--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,20 +1,42 @@
 @font-face {
-	font-family: 'Montserrat';
-	src: url('../assets/fonts/Montserrat-Regular.eot');
-	src: url('../assets/fonts/Montserrat-Regular.ttf');
-	src: url('../assets/fonts/Montserrat-Regular.svg');
-	src: url('../assets/fonts/Montserrat-Regular.woff');
-	src: url('../assets/fonts/Montserrat-Regular.woff2');
+	font-family: 'Roboto';
+	src: url('../assets/fonts/Roboto-Regular.woff');
+	src: url('../assets/fonts/Roboto-Regular.woff2');
 }
 
 @font-face {
-	font-family: 'Montserrat';
-	src: url('../assets/fonts/Montserrat-Bold.eot');
-	src: url('../assets/fonts/Montserrat-Bold.ttf');
-	src: url('../assets/fonts/Montserrat-Bold.svg');
-	src: url('../assets/fonts/Montserrat-Bold.woff');
-	src: url('../assets/fonts/Montserrat-Bold.woff2');
+	font-family: 'Roboto';
+	src: url('../assets/fonts/Roboto-Bold.woff');
+	src: url('../assets/fonts/Roboto-Bold.woff2');
 	font-weight: 600;
 }
 
-$primary: Montserrat, Arial, sans-serif;
+@font-face {
+	font-family: 'Roboto';
+	src: url('../assets/fonts/Roboto-Light.woff');
+	src: url('../assets/fonts/Roboto-Light.woff2');
+	font-weight: 300;
+}
+
+@font-face {
+	font-family: 'RobotoSlab';
+	src: url('../assets/fonts/RobotoSlab-Regular.woff');
+	src: url('../assets/fonts/RobotoSlab-Regular.woff2');
+}
+
+@font-face {
+	font-family: 'RobotoSlab';
+	src: url('../assets/fonts/RobotoSlab-Bold.woff');
+	src: url('../assets/fonts/RobotoSlab-Bold.woff2');
+	font-weight: 600;
+}
+
+@font-face {
+	font-family: 'RobotoSlab';
+	src: url('../assets/fonts/RobotoSlab-Light.woff');
+	src: url('../assets/fonts/RobotoSlab-Light.woff2');
+	font-weight: 300;
+}
+
+$primary: Roboto, Arial, sans-serif;
+$secondary: RobotoSlab, Times New Roman, serif;
