--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @use './layout.scss' as layout;
 @use './media.scss' as media;
 
@@ -19,6 +20,10 @@
 h1,
 .h1 {
 	@include h1;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin h2 {
@@ -31,6 +36,10 @@ h1,
 h2,
 .h2 {
 	@include h2;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin h3 {
@@ -43,6 +52,10 @@ h2,
 h3,
 .h3 {
 	@include h3;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin h4 {
@@ -55,6 +68,10 @@ h3,
 h4,
 .h4 {
 	@include h4;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin h5 {
@@ -67,6 +84,10 @@ h4,
 h5,
 .h5 {
 	@include h5;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin h6 {
@@ -79,6 +100,10 @@ h5,
 h6,
 .h6 {
 	@include h6;
+
+	&:not(:last-child) {
+		margin-bottom: layout.$gap;
+	}
 }
 
 @mixin p {
@@ -106,6 +131,10 @@ p {
 
 	&._sm{
 		@include p_sm;
+	}
+
+	& + & {
+		margin-top: math.div(layout.$gap, 2);
 	}
 }
 
