--- a/src/pages/UiKit/components/Nav/Nav.scss
+++ b/src/pages/UiKit/components/Nav/Nav.scss
@@ -1,6 +1,6 @@
 @use '../../../../style/layout.scss' as layout;
 
-.page-ui-kit-nav {
+.ui-kit-nav {
 	margin-top: layout.$gap;
 	margin-bottom: layout.$gap;
 }
