--- a/src/pages/UiKit/components/Color/Color.scss
+++ b/src/pages/UiKit/components/Color/Color.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../../../style/layout.scss' as layout;
+@use '../../../../style/layout/data' as layout;
 
 .ui-kit-color {
 	&__sample {
