--- a/src/style/typography/data.scss
+++ b/src/style/typography/data.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
-@use './layout.scss' as layout;
-@use './media.scss' as media;
+@use '../layout/data' as layout;
+@use '../media/data' as media;
 
 @mixin h1 {
 	font-weight: 600;
@@ -17,29 +17,11 @@
 	}
 }
 
-h1,
-.h1 {
-	@include h1;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
-}
-
 @mixin h2 {
 	font-weight: 600;
 	font-size: 48px;
 	line-height: 105%;
 	letter-spacing: -0.02em;
-}
-
-h2,
-.h2 {
-	@include h2;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
 }
 
 @mixin h3 {
@@ -49,29 +31,11 @@ h2,
 	letter-spacing: -0.01em;
 }
 
-h3,
-.h3 {
-	@include h3;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
-}
-
 @mixin h4 {
 	font-weight: 600;
 	font-size: 30px;
 	line-height: 116%;
 	letter-spacing: -0.01em;
-}
-
-h4,
-.h4 {
-	@include h4;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
 }
 
 @mixin h5 {
@@ -81,29 +45,11 @@ h4,
 	letter-spacing: -0.01em;
 }
 
-h5,
-.h5 {
-	@include h5;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
-}
-
 @mixin h6 {
 	font-weight: 600;
 	font-size: 20px;
 	line-height: 116%;
 	letter-spacing: -0.01em;
-}
-
-h6,
-.h6 {
-	@include h6;
-
-	&:not(:last-child) {
-		margin-bottom: layout.$gap;
-	}
 }
 
 @mixin p {
@@ -120,24 +66,4 @@ h6,
 
 @mixin footnote {
 	font-size: 12px;
-}
-
-p {
-	@include p;
-
-	&._lg{
-		@include p_lg;
-	}
-
-	&._sm{
-		@include p_sm;
-	}
-
-	& + & {
-		margin-top: math.div(layout.$gap, 2);
-	}
-}
-
-._footnote {
-	@include footnote;
 }
