Colors ui-kit page

--- a/src/style/colors/data.scss
+++ b/src/style/colors/data.scss
@@ -2,6 +2,15 @@ $colors: (
 	primary: #c0baff,
 	secondary: #491818,
 
+	success: #30CF60,
+	warning: #F7D264,
+	danger: #F77F6E,
+	info: #ABDDED,
+
+	muted: #D9D9D9,
+	muted-dark: #999999,
+	muted-light: #EDEDED,
+
 	text: #161616,
 	back: #f5f5f5,
 );
