Buttons ui-kit page

--- a/src/style/colors/data.scss
+++ b/src/style/colors/data.scss
@@ -1,6 +1,10 @@
 $colors: (
 	primary: #c0baff,
+	primary-dark: #7e7ab0,
+	primary-light: #d6d1ff,
 	secondary: #491818,
+	secondary-dark: #341313,
+	secondary-light: #813434,
 
 	success: #30CF60,
 	warning: #F7D264,
