--- a/src/style/colors/data.scss
+++ b/src/style/colors/data.scss
@@ -2,14 +2,26 @@ $colors: (
 	primary: #c0baff,
 	primary-dark: #7e7ab0,
 	primary-light: #d6d1ff,
+
 	secondary: #491818,
 	secondary-dark: #341313,
 	secondary-light: #813434,
 
 	success: #30CF60,
+	success-dark: #239646,
+	success-light: #69e18d,
+
 	warning: #F7D264,
+	warning-dark: #b4994a,
+	warning-light: #fce5a7,
+
 	danger: #F77F6E,
+	danger-dark: #9d5349,
+	danger-light: #f5aea4,
+
 	info: #ABDDED,
+	info-dark: #75a1af,
+	info-light: #d5edf5,
 
 	muted: #D9D9D9,
 	muted-dark: #999999,
