--- a/src/components/Ui/Button/Button.scss
+++ b/src/components/Ui/Button/Button.scss
@@ -53,6 +53,7 @@ $themes: (
 					border-color: colors.getColor($theme + '-light');
 					color: colors.getColor($text);
 					background-color: colors.getColor($theme + '-light');
+					outline: none;
 				}
 			}
 		}
