--- a/src/components/Ui/Button/Button.scss
+++ b/src/components/Ui/Button/Button.scss
@@ -48,6 +48,7 @@ $themes: (
 				}
 
 				&:hover,
+				&:focus,
 				&:active,
 				&._active {
 					border-color: colors.getColor($theme + '-light');
