--- a/src/components/Ui/Tabs/Tabs.scss
+++ b/src/components/Ui/Tabs/Tabs.scss
@@ -12,30 +12,5 @@
 		margin-top: layout.$gap
 	}
 
-	&__tab {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		padding: math.div( layout.$gap, 2 );
-		text-decoration: none;
-		color: colors.getColor( 'text' );
-		cursor: pointer;
-		transition: all 0.3s ease;
-
-		&:hover {
-			background-color: colors.getColor( 'primary-light' );
-		}
-
-		&._current {
-			background-color: colors.getColor( 'primary' );
-			cursor: default;
-		}
-
-		&._disabled {
-			color: colors.getColor( 'muted' );
-			background-color: transparent;
-			cursor: default;
-			pointer-events: none;
-		}
-	}
+	&__tab {}
 }
