--- a/src/style/fonts/data.scss
+++ b/src/style/fonts/data.scss
@@ -38,5 +38,5 @@
 	font-weight: 300;
 }
 
-$primary: Roboto, Arial, sans-serif;
-$secondary: RobotoSlab, Times New Roman, serif;
+$primary: 'Roboto', 'Arial', sans-serif;
+$secondary: 'RobotoSlab', 'Times New Roman', serif;
