--- a/src/components/Ui/Input/Input.scss
+++ b/src/components/Ui/Input/Input.scss
@@ -31,6 +31,7 @@
 		font-size: 12px;
 		color: colors.getColor('text');
 	}
+
 	&__message {
 		margin-top: math.div(layout.$gap, 6);
 		font-size: 12px;
@@ -41,7 +42,7 @@
 		height: 150px;
 	}
 
-	&._required &__caption:after {
+	&._required &__caption::after {
 		content: '*';
 		color: colors.getColor('danger');
 	}
