--- a/src/style/colors/data.scss
+++ b/src/style/colors/data.scss
@@ -7,30 +7,30 @@ $colors: (
 	secondary-dark: #341313,
 	secondary-light: #813434,
 
-	success: #30CF60,
+	success: #30cf60,
 	success-dark: #239646,
 	success-light: #69e18d,
 
-	warning: #F7D264,
+	warning: #f7d264,
 	warning-dark: #b4994a,
 	warning-light: #fce5a7,
 
-	danger: #F77F6E,
+	danger: #f77f6e,
 	danger-dark: #9d5349,
 	danger-light: #f5aea4,
 
-	info: #ABDDED,
+	info: #abdded,
 	info-dark: #75a1af,
 	info-light: #d5edf5,
 
 	muted: #cbcbcb,
 	muted-dark: #999999,
-	muted-light: #EDEDED,
+	muted-light: #ededed,
 
 	text: #161616,
 	back: #f5f5f5,
 
-	white: #FFFFFF,
+	white: #ffffff,
 	black: #000000,
 );
 
