--- a/src/pages/UiKit/pages/Colors/Colors.scss
+++ b/src/pages/UiKit/pages/Colors/Colors.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../../../style/layout/data' as layout;
+@use '../../../../style/layout/module' as layout;
 
 .page-ui-kit-colors {
 	&__col {
