--- a/src/components/Forms/Registration/Registration.scss
+++ b/src/components/Forms/Registration/Registration.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../../style/layout/data' as layout;
+@use '../../../style/layout/module' as layout;
 
 .form-registration {
 
