--- a/src/components/Grid/Row.scss
+++ b/src/components/Grid/Row.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../style/layout/data' as layout;
+@use '../../style/layout/module' as layout;
 
 .row {
 	display: flex;
@@ -38,5 +38,9 @@
 				align-items: $value;
 			}
 		}
+	}
+
+	&._reverse {
+		flex-direction: row-reverse;
 	}
 }
