--- a/src/components/Markup/Section/Section.scss
+++ b/src/components/Markup/Section/Section.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
-@use '../../../style/layout/data.scss' as layout;
+@use '../../../style/layout/module' as layout;
 
 .markup-section {
 	&__header {
