--- a/src/components/Ui/Button/Button.scss
+++ b/src/components/Ui/Button/Button.scss
@@ -1,9 +1,9 @@
 @use 'sass:math';
 @use 'sass:color';
-@use '../../../style/colors/data.scss' as colors;
-@use '../../../style/fonts/data.scss' as fonts;
-@use '../../../style/layout/data.scss' as layout;
-@use '../../../style/typography/data.scss' as typography;
+@use '../../../style/colors/module' as colors;
+@use '../../../style/fonts/module' as fonts;
+@use '../../../style/layout/module' as layout;
+@use '../../../style/typography/module' as typography;
 
 $themes: (
 	primary: text,
