--- a/src/components/Ui/Tabs/Tabs.scss
+++ b/src/components/Ui/Tabs/Tabs.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
-@use '../../../style/colors/data.scss' as colors;
-@use '../../../style/layout/data.scss' as layout;
+@use '../../../style/colors/module' as colors;
+@use '../../../style/layout/module' as layout;
 
 .ui-tabs {
 	&__header {
