--- a/src/pages/UiKit/components/Nav/Nav.scss
+++ b/src/pages/UiKit/components/Nav/Nav.scss
@@ -1,4 +1,4 @@
-@use '../../../../style/layout/data' as layout;
+@use '../../../../style/layout/module' as layout;
 
 .ui-kit-nav {
 	margin-top: layout.$gap;
