--- a/src/style/layout/module.scss
+++ b/src/style/layout/module.scss
@@ -1,7 +1,7 @@
-@use 'sass:math';
+@use './config/layout.json' as config;
 
-$gap: 30px;
+//noinspection SassScssUnresolvedVariable
+$gap: config.$gap;
 
-@function resp($value: 100, $layout: 360, $unit: vw) {
-	@return (math.div($value, $layout) * 100) + $unit;
-}
+//noinspection SassScssUnresolvedVariable
+$dur: config.$dur;
