--- a/src/style/typography/module.scss
+++ b/src/style/typography/module.scss
@@ -4,7 +4,7 @@
 
 @mixin h1 {
 	font-weight: 600;
-	font-size: layout.resp(56);
+	font-size: 56px;
 	line-height: 100%;
 	letter-spacing: -0.02em;
 
