--- a/src/components/Ui/Input/Input.scss
+++ b/src/components/Ui/Input/Input.scss
@@ -13,8 +13,7 @@
 		font-size: 14px;
 		color: colors.getColor('text');
 		background-color: transparent;
-		resize: none;
-		transition: all 0.3s ease;
+		transition: border-color 0.3s ease;
 
 		&:focus {
 			border-color: colors.getColor('primary');
